src/objects/DemandPlanning__c.object
<CustomObject>
    <fields>
        <fullName>DPAccountName__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Demand Planning</relationshipLabel>
        <relationshipName>DPAccountName</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Diff10__c</fullName>
        <label>Oct-Diff</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Diff11__c</fullName>
        <label>Nov-Diff</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Diff12__c</fullName>
        <label>Dec-Diff</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FiscalYear__c</fullName>
        <label>Fiscal Year</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>FY12</fullName>
                    <default>true</default>
                    <label>FY12</label>
                </value>
                <value>
                    <fullName>FY13</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Plan10__c</fullName>
        <label>Oct-Plan</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Plan11__c</fullName>
        <label>Nov-Plan</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Plan12__c</fullName>
        <label>Dec-Plan</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ProductType__c</fullName>
        <label>Product Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sheet</fullName>
                </value>
                <value>
                    <fullName>Plank</fullName>
                </value>
                <value>
                    <fullName>Steel Pipe</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Result10__c</fullName>
        <label>Oct-Result</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Result11__c</fullName>
        <label>Nov-Result</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Result12__c</fullName>
        <label>Dec-Result</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Demand Planning</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>DPAccountName__c</columns>
        <columns>ProductType__c</columns>
        <columns>Plan4__c</columns>
        <columns>Result4__c</columns>
        <columns>Diff4__c</columns>
        <columns>Plan5__c</columns>
        <columns>Result5__c</columns>
        <columns>Diff5__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>ja</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>DP-{YYYY}{MM}{DD}-{0000}</displayFormat>
        <label>Demand Plan No</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>